# OpenUSD-Project

./: .gitignore  Justfile  README.md  pyproject.toml
nvidia-tutorials/: README.md
nvidia-tutorials/DefaultPrim/: example_1.py
nvidia-tutorials/Lights/: example_1.py  example_2.py
nvidia-tutorials/Prim-and-Property-Paths/: example_1.py
nvidia-tutorials/Prims/: example_1.py  example_2.py  example_3.py
nvidia-tutorials/Properties/Attributes/: example_1.py  example_2.py  example_3.py
nvidia-tutorials/Reference/: example_1.py  example_2.py
nvidia-tutorials/Scope/: example_1.py
nvidia-tutorials/Specifiers/: example_1.py  example_2.py
nvidia-tutorials/Stage/: example_1.py
nvidia-tutorials/TimeCodes-and-TimeSamples/: example_1.py  example_2a.py  example_2b.py  timecode_sample.py
nvidia-tutorials/Xform/: example_1.py
nvidia-tutorials/XformCommonAPI/: example_1.py
readme/: README.md
