[project]
name = "openusd-project"
version = "0.1.0"
description = "OpenUSD project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openusd",
    "pyopengl>=3.1.10",
    "pyside6>=6.9.2",
]

[tool.uv.workspace]
members = [
    "lib/openusd",
]

[tool.uv.sources]
openusd = { workspace = true, editable = true }
